setting up reducers

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
     "extends": "rallycoding",
     "rules": {
-        "arrow-body-style":"off"
+        "arrow-body-style":"off",
+        "import/newline-after-import":"off",
+        "global-require":"off"
     }
 }
